--- a/partials/login-register.html
+++ b/partials/login-register.html
@@ -6,7 +6,7 @@
 
 		To begin, please sign in with Google. <br><br>
 
-		After you have logged in, you may begin creating regions and characters.<br><br>
+		After you have logged in, you may begin creating regions by clicking the MY REGIONS tab.<br><br>
 
 		The regions are here for you to establish locations within your campaign, and what information you, as the campaign organizer, must remember. <br><br>
 
