--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -136,6 +136,7 @@ h3{
   border: solid black 3px;
   flex-direction: column;
   color:black;
+  font-size: 1.2em;
 }
 #characterBeingCreated form{
   padding: 2vh;
@@ -159,13 +160,12 @@ h3{
 #apiInfoCharacterCreater div {
   display: flex;
   flex-direction: column;
-  max-height: 700px;
-  overflow: scroll;
   background-color: #5E412F;
   margin: 2vh;
   border: solid black 3px;
   flex-direction: column;
   color: #78C0A8;
+  font-size: 1.2em;
 }
 
 /***************************** YOUR PAGES *****************************/
@@ -177,10 +177,10 @@ h3{
   background-color: white;
   padding: 3vh;
   padding-bottom: 5vh;
-  margin: 1vh;
+  margin: 4vh;
   flex-wrap: wrap !important;
   flex-direction: column;
-  width: 61vh;
+  width: 85vh;
   height: 100vh;
   overflow: scroll;
   border-radius: 20px;
@@ -250,6 +250,7 @@ h3{
   margin: 2vh;
   border: solid black 3px;
   flex-direction: column;
+  font-size: 1.2em;
 }
 #characterToEdit form{
   padding: 2vh;
@@ -272,12 +273,11 @@ h3{
 #apiInfoForEdit div{
   display: flex;
   flex-direction: column;
-  max-height: 700px;
-  overflow: scroll;
   background-color: #5E412F;
   margin: 2vh;
   border: solid black 3px;
   flex-direction: column;
+  font-size: 1.2em;
 }
 
 #apiInfoForEdit input{
