--- a/partials/my-characters.html
+++ b/partials/my-characters.html
@@ -7,7 +7,7 @@
   <!-- CHARACTER DATA COMING FROM showMyCharacters in control-my-characters -->
     <div class="thumbnail">
       <div class="caption">
-        <h2 class="CharacterName">{{characters.name}}</h2>
+        <h2 class="CharacterName"><a ng-href="#!/singleCharacter/{{characters.id}}">{{characters.name}}</a></h2>
         <h4>RACE</h4>
         <p>{{characters.race}}</p>
         <h4>CLASS</h4>
