--- a/partials/login-register.html
+++ b/partials/login-register.html
@@ -18,6 +18,8 @@
 
 		In addition you can click on the MY REGIONS tab and see all of your created regions as well as all of the characters that belong to that region. <br><br>
 
+		If you select a character's name in the MY CHATACTERS tab, you will be taken to a page of just that character with a note pad. This page is for encounters. No changes will be saved.<br><br>
+
 		To log out, simply come back to this page and click the LOG OUT button. 
 
 		Thank you, and enjoy!
