--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -169,6 +169,18 @@ h3{
 }
 
 /***************************** YOUR PAGES *****************************/
+/********** SINGLE CHARACTER **********/
+#characterToDisplay{
+  max-width:50%;
+  border: 2px solid black;
+  float: left;
+}
+#notesArea{
+  float: right;
+}
+#singleCharacterPage{
+  width: 90%;
+}
 /********** MY CHARACTERS **********/
 
 .myCharactersDisplay{
@@ -231,6 +243,36 @@ h3{
 /*******EDIT REGION PAGE**********/
 
 /*******EDIT CHARACTER PAGE********/
+.checkbox {
+  width: 50px;
+  height: 10px;
+  background: #333;
+  margin: 20px auto;
+  position: relative;
+  border-radius: 50px;
+  box-shadow: inset 0px 1px 1px rgba(0, 0, 0, 0.5), 0px 1px 0px rgba(255, 255, 255, 0.2);
+  label {
+    display: block;
+    width: 16px;
+    height: 16px;
+    position: absolute;
+    top: -3px;
+    left: -3px;
+    cursor: pointer;
+    background: #fcfff4;
+    background: linear-gradient(to bottom, #fcfff4 0%, #dfe5d7 40%, #b3bead 100%);
+    border-radius: 50px;
+    box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.3);
+    transition: all 0.4s ease;
+  }
+  input[type=checkbox] {
+    visibility: hidden;
+    &:checked + label {
+      left: 37px;
+    }  
+  }
+}
+
 #editCharacterPage{
   width:90%;
 }
