--- a/partials/login-register.html
+++ b/partials/login-register.html
@@ -6,7 +6,7 @@
 
 		To begin, please sign in with Google. <br><br>
 
-		After you have logged in, you may begin creating regions by clicking the MY REGIONS tab.<br><br>
+		After you have logged in, you may begin creating regions by clicking the CREATE REGION tab.<br><br>
 
 		The regions are here for you to establish locations within your campaign, and what information you, as the campaign organizer, must remember. <br><br>
 
@@ -18,7 +18,7 @@
 
 		In addition you can click on the MY REGIONS tab and see all of your created regions as well as all of the characters that belong to that region. <br><br>
 
-		If you select a character's name in the MY CHATACTERS tab, you will be taken to a page of just that character with a note pad. This page is for encounters. No changes will be saved.<br><br>
+		If you select a character's name in the MY CHATACTERS or the MY REGIONS tab, you will be taken to a page of just that character with a note pad. This page is for encounters. No changes will be saved.<br><br>
 
 		To log out, simply come back to this page and click the LOG OUT button. 
 
