finished basic site

--- a/partials/character-creator.html
+++ b/partials/character-creator.html
@@ -103,7 +103,7 @@
 	</div>
 	<!--*************************************************************************************************************************************************************************************-->
 	<div id="apiInfoCharacterCreater">
-		<h1>ADD INFO</h1><label>Filter Search: <input ng-model="searchText"></label>
+		<h1>ADD INFO</h1><label>Filter Search: <input ng-model="searchText"><p>Search through equipment, skills, feats, and spells</p></label>
 
 		<!-- RACE -->
 			<h3>Races</h3>
@@ -124,7 +124,7 @@
 		</div>
 		<!-- SKILLS -->
 			<h3>Skills</h3>
-		<div class="checkbox">
+		<p>CLICK TO OPEN:</p><div class="checkbox">
 				<td><input type=checkbox ng-model=skillscollapse value="None" id="slideOne" name="check"></td>
 				<label for="slideOne"></label>
 			</div>
@@ -138,7 +138,7 @@
 		</div>
 		<!-- FEATS -->
 			<h3>Feats</h3>
-			<div class="checkbox">
+			<p>CLICK TO OPEN:</p><div class="checkbox">
 				<td><input type=checkbox ng-model=featscollapse value="None" id="slideTwo" name="check"></td>
 				<label for="slideTwo"></label>
 				</div>
@@ -154,7 +154,7 @@
 		<!-- EQUIPMENT -->
 			<!-- EQUIPMENT -->
 			<h3>Equipment</h3>
-			<div class="checkbox">
+			<p>CLICK TO OPEN:</p><div class="checkbox">
 				<td><input type=checkbox ng-model=equipmentcollapse value="None" id="slideThree" name="check"></td>
 				<label for="slideThree"></label>
 			</div>
@@ -178,7 +178,7 @@
 		</div>
 		<!-- SPELLS -->
 			<h3>Spells</h3>
-			<div class="checkbox">
+			<p>CLICK TO OPEN:</p><div class="checkbox">
 				<td><input type=checkbox ng-model=spellscollapse value="None" id="slideFour" name="check"></td>
 				<label for="slideFour"></label>
 			</div>
