finished mvp with no more bugs aside from api issues

--- a/partials/character-creator.html
+++ b/partials/character-creator.html
@@ -14,21 +14,21 @@
 		<div id="class" class="formBox" ng-model="class">
 			<h3>Class</h3>
 			<ul id="selectedClass">
-				<li ng-repeat="name in yourClass track by $index" ng-click="removeClass(item)">{{name}}</li>
+				<li ng-repeat="name in yourClass track by $index" ng-click="removeClass($index)">{{name}}</li>
 			</ul>
 		</div>
 		<!-- SKILLS -->
 		<div id="skill" class="formBox" ng-model="skills">
 			<h3>Skills</h3>
 			<ul id="selectedSkill">
-				<li ng-repeat="name in yourSkills track by $index" ng-click="removeSkill(item)">{{name}}</li>
+				<li ng-repeat="name in yourSkills track by $index" ng-click="removeSkill($index)">{{name}}</li>
 			</ul>
 		</div>
 		<!-- FEATS -->
 		<div id="featuresForm" class="formBox" ng-model="features">
 			<h3>Feats</h3>
 			<ul id="selectedFeatures">
-				<li ng-repeat="name in yourFeats track by $index" ng-click="removeFeat(item)">{{name}}</li>
+				<li ng-repeat="name in yourFeats track by $index" ng-click="removeFeat($index)">{{name}}</li>
 			</ul>
 		</div>
 
@@ -36,7 +36,7 @@
 		<div id="equipmentForm" class="formBox" ng-model="equipment">
 			<h3>Equipment</h3>
 			<ul id="Selectedequipment">
-				<li ng-repeat="name in yourEquipment track by $index" ng-click="removeEquipment(item)">{{name}}</li>
+				<li ng-repeat="name in yourEquipment track by $index" ng-click="removeEquipment($index)">{{name}}</li>
 			</ul>
 		</div>
 
@@ -44,14 +44,14 @@
 		<div id="magicSchoolsForm" class="formBox" ng-model="magicSchools">
 			<h3>Magic-Schools</h3>
 			<ul id="selectedMagicSchools">
-				<li ng-repeat="name in yourMagicSchools track by $index" ng-click="removeMagicSchool(item)">{{name}}</li>
+				<li ng-repeat="name in yourMagicSchools track by $index" ng-click="removeMagicSchool($index)">{{name}}</li>
 			</ul>
 		</div>
 		<!-- SPELLS -->
 		<div id="spellsForm" class="formBox" ng-model="spells">
 			<h3>Spells</h3>
 			<ul id="selectedSpells">
-				<li ng-repeat="name in yourSpells track by $index" ng-click="removeSpell(item)">{{name}}</li>
+				<li ng-repeat="name in yourSpells track by $index" ng-click="removeSpell($index)">{{name}}</li>
 			</ul>
 		</div>
 		<!-- NOTES -->
@@ -165,7 +165,6 @@
 					<li>{{item.data.equipment_category}}</li>
 					<li>{{item.data.armor_category}}{{item.data.gear_category}} {{item.data.weapon_range}}{{item.data.vehicle_category}}{{item.data.tool_category}}</li>
 					<li>{{item.data.desc[0]}}</li>
-					<li>{{item.data.damage.dice_count}} D:{{item.data.damage.dice_value}}{{item.data.armor_class.base}}</li>
 				</ul>
 			</ul>
 		</div>
