--- a/partials/login-register.html
+++ b/partials/login-register.html
@@ -22,7 +22,9 @@
 
 		To log out, simply come back to this page and click the LOG OUT button. 
 
-		Thank you, and enjoy!
+		Thank you, and enjoy!<br><br>
+
+		P.S. Please excuse gabs in equipment data. The API I am using has some errors. Version two will fix the problem. 
 		</p>
 	</div>
 
