--- a/partials/login-register.html
+++ b/partials/login-register.html
@@ -1,6 +1,6 @@
 <div id="homePageContainer">
 	<div id="introduction">
-		<p>Hello! 
+		<p class="loginP">Hello! 
 
 		Welcome to this simple DnD character builder. <br><br>
 
